# Chess

./: .gitignore  CMakeLists.txt  Coordinates.cpp  Coordinates.h  Desk.cpp  Desk.h  Engine.py  LICENSE  Menu.cpp  Menu.h  Move.cpp  Move.h  Patch.patch  README.md  board.py  builder.py  cache_cleaner.py  engine.py  main.cpp  main.py  piece.py  player1_VS_player2.txt  setup.py
Chess/Logs/: LogWriter.py
Chess/core/: board.py
Chess/core/algebraic/: converter.py  (+2 more)
Chess/game/: game.py
Chess/pieces/: bishop.py  king.py  knight.py  piece.py  queen.py  rook.py
Chess/players/: __init__.py  human.py  player.py
Client/: Client.py
DebugOutput/: print_possibilities.txt
Engine/: Engine.cpp  Engine.h  MoveWeight.cpp  MoveWeight.h
Figures/: Bishop.cpp  Bishop.h  Castle.cpp  Castle.h  Figure.cpp  Figure.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h
Game/: Game.cpp  Game.h  PVE_GAME.cpp  PVE_GAME.h  PVP_GAME.cpp  PVP_GAME.h
Graphics/: ChessGraphic.cpp  ChessGraphic.h
LogsFiles/: Desk.txt  FiguresPossibleMovesWriter.cpp  FiguresPossibleMovesWriter.h
LogsWriter/: FiguresPossibleMovesWirter.cpp  FiguresPossibleMovesWirter.h  FiguresPossibleMovesWriter.cpp  FiguresPossibleMovesWriter.h  GameLogsWriter.cpp  GameLogsWriter.h
chess_py/core/: color.py
chess_py/game/: game.py  game_state.py
chess_py/pieces/: pawn.py  piece.py  piece_const.py
chess_py/players/: human.py  player.py
docs/: conf.py
tests/test_core/: test_board.py  test_color.py
tests/test_pieces/: test_bishop.py  test_king.py  test_knight.py  test_pawn.py
(+29 files in other folders)
